--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,11 @@ html, body {
     width: 14px;
     height: 14px;
 }
+
+.absolute-container {
+    position: absolute;
+    top: 32px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
